# SpecMatrix

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: celery.py  settings.py  urls.py  views.py
docs/: architecture.md  specification.md
templates/: home.html
templates/partials/: dashboard_summary.html
